--- a/player/tv/index-video.html
+++ b/player/tv/index-video.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Custom Video Player JavaScript | CodingNepal</title>
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="style1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- These 3 links are only for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -55,7 +55,7 @@
     </div>
 
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <!--<figure class="wp-block-video"><video controls="" src=""></video></figure>-->
 
   </body>
